<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pasaribu Store</string>
    <string name="hello_world">Hello world!</string>
    <string name="empty"></string>
    <string name="action_settings">Settings</string>
    <string name="action_favoritize">Favorite</string>
    <string name="action_done_editing">Ubah</string>
    <string name="option_setting">Settings</string>
    <string name="option_search">Search</string>
    <string name="title_recently">Recently</string>
    <string name="title_activity_add_data_barang">Add Data Barang</string>
    <string name="option_done_adding">Done</string>
    <string name="lable_product_name">Nama Barang</string>
    <string name="hint_product_name">Nama Barang</string>
    <string name="lable_product_brand">Merek</string>
    <string name="hint_product_brand">Merek</string>
    <string name="lable_product_price">Harga Satuan</string>
    <string name="hint_product_stock">Jumlah</string>
    <string name="lable_product_unit">Satuan</string>
    <string name="hint_product_unit">Satuan</string>
    <string name="lable_product_category">Kategory</string>
    <string name="lable_supplier">Penjual</string>
    <string name="btn_add_supplier">Tambah Penjual</string>
    <string name="lable_product_description">Deskripsi Barang</string>
    <string name="hint_product_description">Deksripsi Barang</string>
    <string name="option_add_barang">Tambah Barang</string>
    <string name="image_button_description">Image Button</string>
    <string name="title_add_data_barang">Tambah Data Barang</string>
    <string name="title_edit_data_barang">Ubah Data Barang</string>
    <string name="lable_product_stock">Jumlah Barang</string>
    <string name="hint_product_price">Harga</string>
    <string name="lable_supplier_name">Nama</string>
    <string name="hint_supplier_name">Nama Toko</string>
    <string name="lable_supplier_address">Alamat Toko</string>
    <string name="hint_supplier_address">Alamat Toko</string>
    <string name="lable_supplier_contact">Kontak</string>
    <string name="hint_supplier_contact">Nomor Telepon</string>
    <string name="btn_add">Tambah</string>
    <string name="btn_cancel">Batal</string>
    <string name="option_overflow_edit">Edit</string>
    <string name="option_overflow_delete">Delete</string>
    <string name="title_activity_edit_data_barang">Edit Data Barang</string>
    <string name="title_activity_setting">Pengaturan</string>
    <string name="lbl_alamat_ip">Alamat IP</string>
    <string name="hint_ipAddress">Alamat IP Server</string>
    <string name="title_activity_product_detail">Product Detail</string>
    <string name="title_supplier">Supplier</string>
    <string name="msg_loading_data">Memuat data&#8230;</string>

</resources>