<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pasaribu.store.AddDataBarang" >

    <TextView
        android:id="@+id/lbl_product_name"
        style="@style/lable_margin_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lable_product_name" />

    <EditText
        android:id="@+id/editText_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_product_name" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lbl_product_brand"
        style="@style/lable_margin_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lable_product_brand" />

    <EditText
        android:id="@+id/editText_product_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_product_brand" />

    <LinearLayout
        android:id="@+id/layout_product_amount_lable"
        style="@style/lable_margin_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lbl_product_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/lable_product_price" />

        <TextView
            android:id="@+id/lbl_product_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/lable_product_unit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_product_amount_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editText_product_stock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:ems="10"
            android:hint="@string/hint_product_stock" />

        <EditText
            android:id="@+id/EditText_product_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:ems="10"
            android:hint="@string/hint_product_unit" />
    </LinearLayout>

    <TextView
        android:id="@+id/lbl_product_category"
        style="@style/lable_margin_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lable_product_category" />

    <Spinner
        android:id="@+id/spinner_product_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lbl_supplier"
        style="@style/lable_margin_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lable_supplier" />

    <LinearLayout
        android:id="@+id/layout_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/spinner_supplier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_add_supplier"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_add_supplier" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        style="@style/lable_margin_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lable_product_description" />

    <EditText
        android:id="@+id/editText_product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:height="100dp"
        android:hint="@string/hint_product_description"
        android:inputType="textMultiLine" />

</LinearLayout>