<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_scroll_add_data_barang"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >

    <LinearLayout
        android:id="@+id/LinearLayout_utama_add_data_barang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.pasaribu.store.EditDataBarang" >

        <TextView
            android:id="@+id/title_edit_data_barang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:text="@string/title_edit_data_barang"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/lbl_product_name"
            style="@style/lable_margin_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lable_product_name" />

        <EditText
            android:id="@+id/editText_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_product_name"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/lbl_product_brand"
            style="@style/lable_margin_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lable_product_brand" />

        <AutoCompleteTextView
            android:id="@+id/TextView_product_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_product_brand"
            android:inputType="textAutoComplete" />

        <TextView
            android:id="@+id/lbl_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_top_lbl"
            android:text="@string/lable_product_price" />

        <EditText
            android:id="@+id/editText_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_product_price"
            android:inputType="number" />

        <LinearLayout
            android:id="@+id/layout_product_amount_lable"
            style="@style/lable_margin_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_product_stock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/lable_product_stock" />

            <TextView
                android:id="@+id/lbl_product_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/lable_product_unit" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_product_amount_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/editText_product_stock"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:ems="10"
                android:hint="@string/hint_product_stock"
                android:inputType="number" />

            <AutoCompleteTextView
                android:id="@+id/autoComp_product_unit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:ems="10"
                android:hint="@string/hint_product_unit"
                android:inputType="textAutoComplete" />

        </LinearLayout>

        <TextView
            android:id="@+id/lbl_product_category"
            style="@style/lable_margin_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lable_product_category" />

        <Spinner
            android:id="@+id/spinner_product_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lbl_supplier"
            style="@style/lable_margin_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lable_supplier" />

        <LinearLayout
            android:id="@+id/layout_supplier"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/spinner_supplier"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_add_supplier"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_add_supplier" />
        </LinearLayout>

        <TextView
            android:id="@+id/lbl_product_description"
            style="@style/lable_margin_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lable_product_description" />

        <EditText
            android:id="@+id/editText_product_description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/hint_product_description"
            android:inputType="textMultiLine" />
    </LinearLayout>

</ScrollView>